--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --no-cache",
+    "start": "parcel my-project/src/index.html",
+    "build": "parcel build my-project/src/index.html --no-cache",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
